finished fixing validation, redid it with mongoose
